# build-all

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE  args.cmake  utils.cmake
check/: CMakeLists.txt
fixes/: msvc-unistd.cmake
